kay-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"? Kay wants to run echo hello world                                           "
"                                                                                "
"Model wants to run a command                                                    "
"                                                                                "
"▌Allow command?                                                                 "
"▌ Yes   Always   No, provide feedback                                           "
"▌ Approve and run the command                                                   "
"                                                                                "
