kay-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 878
expression: terminal.backend()
---
"                                                                                "
" Analyzing (0s • Esc to interrupt)                                              "
"                                                                                "
"▌ Ask Kay to do anything                                                        "
" ⏎ send   Ctrl+J newline   Ctrl+T transcript   Ctrl+H help                      "
"                                                                                "
